# python_champions

./: .gitignore  AGENTS.md  PLAN.md  README.md  build.ps1  pyproject.toml
ai/: __init__.py  client.py  health.py  prompts.py
configs/: default.toml
engine/: __init__.py  cli.py  paths.py
engine/analysis/: __init__.py  ai_report.py  feedback.py  movement.py  pipeline.py  runtime.py  static.py
engine/core/: __init__.py  action.py  bot_base.py  bot_profile.py  config.py  config_io.py  errors.py  game.py  live_game.py  loader.py  opponents.py  player.py  replay.py  scenario.py  scenario_config.py  scenario_registry.py  session.py  turn_result.py
engine/i18n/: __init__.py  ai_strings.py  feedback_strings.py  guides.py  messages_en.py  messages_uk.py  ui_strings.py
implementation/: PHASE_REGISTRY.yaml  Phase_0.md  Phase_1.md  Phase_2.md  Phase_2_5.md  Phase_2_6.md  Phase_2_7.md  Phase_2_8.md  Phase_2_9.md  Phase_3.md  Phase_3_1.md  Phase_4.md  Phase_5.md  Phase_6.md  README.md
packaging/: code_scenarios.spec  launcher_gui.py
scenarios/: __init__.py
scripts/: slice_char_icons.py  slice_ui_assets.py
student_bots/: example_bot copy.py  example_bot.py
tests/: test_action_effects.py  test_ai_disabled.py  test_ai_health.py  test_ai_mock.py  test_ai_prompt.py  test_ai_report_mentor.py  test_ai_timeout.py  test_boss_fight_ai.py  test_boss_fight_combat.py  test_boss_fight_practice.py  test_boss_fight_regression.py  test_boss_fight_setup.py  test_boss_fight_win_lose.py  test_bot_guide_content.py  test_bot_profile.py  test_coach_data.py  test_coach_score_card.py  test_config_io.py  test_dumb_ai.py  test_energy_stations_attack.py  test_energy_stations_depletion.py  test_energy_stations_gather.py  test_energy_stations_multiside.py  test_energy_stations_regression.py  test_energy_stations_setup.py  test_engine_turns.py  test_feedback_items.py  test_feedback_movement.py  test_feedback_templates.py  test_game_view.py  test_hud_mentor.py  test_i18n.py  test_loader.py  test_mana_pools_attack.py  test_mana_pools_depletion.py  test_mana_pools_gather.py  test_mana_pools_movement.py  test_mana_pools_multiside.py  test_mana_pools_regression.py  test_mana_pools_setup.py  (+19 more)
ui/: __init__.py  __main__.py  app.py  audio.py  bot_guide_content.py  bot_guide_layout.py  coach_data.py  i18n.py  theme.py
ui/render/: hud.py  (+6 more)
(+82 files in other folders)
