[project]
name = "code-scenarios"
version = "0.1.0"
description = "Educational turn-based game framework for student Python bots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce",
    "pydantic",
    "radon",
    "ruff",
]

[project.optional-dependencies]
dev = ["pytest", "rich"]
build = ["build>=1.0", "pyinstaller>=6.0"]

[project.scripts]
code-scenarios = "engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "ui/assets/**",
    "scenarios/**/scenario.toml",
]
exclude = [
    "/tests",
    "/implementation",
    "/scripts",
    "/packaging",
    "/.cursor",
    "/.vscode",
    "/build.ps1",
    "ui/assets/STYLE_GUIDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "scenarios", "ui", "ai"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "configs"
"student_bots" = "student_bots"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "display: requires a display / pygame window",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["engine", "tests", "scenarios", "ui"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "scenarios", "ui"]
